Document how to run the benchmark with Java 16+